[package]
name = "wakerscale"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
facet = "0.27.12"
facet-json = "0.24.13"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
libtailscale = { path = "vendor/libtailscale" }
regex = { version = "1.11.1", features = ["std"], default-features = false }
tokio = { version = "1.45.1", features = ["rt", "net"] }
wake-on-lan = "0.2.0"
